client functional able to view the questions

--- a/codejudge/client/package.json
+++ b/codejudge/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codeotaku",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.16.0",
-    "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.473.0",
+    "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -23,7 +26,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.1.5",
     "@eslint/eslintrc": "^3"
   }
 }
